--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   </div>
   <nav class="navbar">
-    <img src="assets/image.png" class="logo" />
+    <img src="./assets/image.png" class="logo" />
     <ul class="nav-links">
       <li><a href="#">Home</a></li>
       <li><a href="#">Class</a></li>
@@ -68,7 +68,7 @@
     <div class="card-row">
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 card">
-          <img class="round-img" src="assets/ashtanga.jpg" class="card-img-top" alt="...">
+          <img class="round-img" src="./assets/ashtanga.jpg" class="card-img-top" alt="...">
           <div class="card-body ">
             <i class="card-menu-button fa-solid fa-ellipsis-vertical"></i>
             <div class="card-span">
@@ -81,7 +81,7 @@
         </div>
 
         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 card">
-          <img class="round-img" src="assets/ashtanga.jpg" class="card-img-top" alt="...">
+          <img class="round-img" src="./assets/ashtanga.jpg" class="card-img-top" alt="...">
           <div class="card-body ">
             <i class="card-menu-button fa-solid fa-ellipsis-vertical"></i>
             <div class="card-span">
@@ -94,7 +94,7 @@
         </div>
 
         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 card">
-          <img class="round-img" src="assets/ashtanga.jpg" class="card-img-top" alt="...">
+          <img class="round-img" src="./assets/ashtanga.jpg" class="card-img-top" alt="...">
           <div class="card-body ">
             <i class="card-menu-button fa-solid fa-ellipsis-vertical"></i>
             <div class="card-span">
@@ -150,7 +150,7 @@
 
       <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 dynamics_sec2">
         <div class="img-style">
-          <img src="assets/yoga.jpg" alt="" />
+          <img src="./assets/yoga.jpg" alt="" />
         </div>
       </div>
     </div>
@@ -162,7 +162,7 @@
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 dynamics_sec2" style="padding-right: 4%;">
         <div class="img-style">
-          <img src="assets/yoga.jpg" alt="" />
+          <img src="./assets/yoga.jpg" alt="" />
         </div>
       </div>
 
@@ -218,7 +218,7 @@
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 healthy-excercise">
           <div class="healthy-excercise-img">
-            <img src="assets/exercise.jpg" alt="">
+            <img src="./assets/exercise.jpg" alt="">
           </div>
           <h4>EXERCISE</h4>
           <h5>Lorem ipsum dolor sit amet consectetur adipiscing, elit mo- lestie posuere</h5>
@@ -227,7 +227,7 @@
 
         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 healthy-excercise">
           <div class="healthy-excercise-img">
-            <img src="assets/exercise.jpg" alt="">
+            <img src="./assets/exercise.jpg" alt="">
           </div>
           <h4>FEEDING</h4>
           <h5>Lorem ipsum dolor sit amet consectetur adipiscing, elit mo- lestie posuere</h5>
@@ -235,7 +235,7 @@
 
         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 healthy-excercise">
           <div class="healthy-excercise-img">
-            <img src="assets/exercise.jpg" alt="">
+            <img src="./assets/exercise.jpg" alt="">
 
           </div>
           <h4>MEDITATION</h4>
@@ -258,7 +258,7 @@
     <div class="card-row">
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 card">
-          <img class="round-img" src="assets/ashtanga.jpg" class="card-img-top" alt="...">
+          <img class="round-img" src="./assets/ashtanga.jpg" class="card-img-top" alt="...">
           <div class="card-body ">
             <i class="card-menu-button fa-solid fa-ellipsis-vertical"></i>
             <div class="card-span">
@@ -271,7 +271,7 @@
         </div>
 
         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 card">
-          <img class="round-img" src="assets/ashtanga.jpg" class="card-img-top" alt="...">
+          <img class="round-img" src="./assets/ashtanga.jpg" class="card-img-top" alt="...">
           <div class="card-body ">
             <i class="card-menu-button fa-solid fa-ellipsis-vertical"></i>
             <div class="card-span">
@@ -284,7 +284,7 @@
         </div>
 
         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 card">
-          <img class="round-img" src="assets/ashtanga.jpg" class="card-img-top" alt="...">
+          <img class="round-img" src="./assets/ashtanga.jpg" class="card-img-top" alt="...">
           <div class="card-body ">
             <i class="card-menu-button fa-solid fa-ellipsis-vertical"></i>
             <div class="card-span">
@@ -314,7 +314,7 @@
         </div>
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 workshop_sec2">
             <div class="workshop_sec2_img">
-                <img src="assets/yoga.jpg" alt="">
+                <img src="./assets/yoga.jpg" alt="">
             </div>
         </div>
 
